// The core build script detailing dependencies and plugins
plugins {
    id 'java'
    id 'application'
}

group = 'bringmerch'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    mainClass = 'core.BareServer'
}

dependencies {
//    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
//    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

//allprojects {
//    tasks.withType(JavaCompile) {
//        options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
//    }
//}

test {
    failOnNoDiscoveredTests = false
}